fix user index display on iphone 6 and iphone 6Plus

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -118,10 +118,6 @@
     }
 
 //=======================================User index selection=============================================
-    #sort_by_label{
-      
-    }
-
     #user_role{
       width: 70%;
       margin-bottom: 10px;
@@ -177,13 +173,17 @@
       width: 340px;
     }
 
-    #sort_by_label{
-      
+
+   
+
+//===================================User Index===========================================
+    #filter_by{
+      display:block;
     }
 
-
-
-
+    #sort_by{
+      margin-left: 10px;
+    }
 
 //======================================================================================================
 
